ANY-459 - Add protected Atom Lab catalog
